--- a/configs/ade20k-150-panoptic/maskformer_panoptic_R50_bs16_720k.yaml
+++ b/configs/ade20k-150-panoptic/maskformer_panoptic_R50_bs16_720k.yaml
@@ -4,6 +4,7 @@ MODEL:
     PIXEL_DECODER_NAME: "TransformerEncoderPixelDecoder"
     TRANSFORMER_ENC_LAYERS: 6
   MASK_FORMER:
+    TRANSFORMER_IN_FEATURE: "transformer_encoder"
     TEST:
       PANOPTIC_ON: True
       OVERLAP_THRESHOLD: 0.8
